--- a/grid.css
+++ b/grid.css
@@ -62,6 +62,10 @@ img {
 }
 
 /* Top container */
+/* https://www.smashingmagazine.com/understanding-css-grid-template-areas/ 
+    You can only define each area once
+    You can’t create a non-rectangular area
+    */
 .top-container {
     display: grid;
     grid-gap: 20px;
@@ -149,36 +153,72 @@ img {
 .Pictures {
     display: grid;
     grid-gap: 20px;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
 }
 
 .Pictures img {
     width: 100%;
     box-shadow: var(--shadow);
+    background-size: contain;
+}
+
+.pic1 {
+    grid-column: 1/3;
+    grid-row: 1/3;
+}
+
+.pic2 {
+    grid-column: 4;
+    grid-row: 2;
+}
+
+.pic3 {}
+
+.pic4 {
+    grid-column: 2/4;
+}
+
+.pic5 {
+    grid-row: 3;
+}
+
+.pic6 {}
+
+.pic7 {
+    grid-column: 1/5;
+}
+
+.pic8 {
+    grid-column: 1/3;
+    grid-row: 5/7;
+}
+
+.pic9 {
+    grid-area: 6/3/8/5;
 }
 
 /* Footer */
-footer{
-    margin-top:2rem;
+footer {
+    margin-top: 2rem;
     background: var(--dark);
     color: var(--light);
     text-align: center;
     padding: 1rem;
 }
 
-/* Media Query for less thatn 700px*/
-@media(max-width:700px){
-    .top-container{
+/* Media Query for less that 700px*/
+@media(max-width:700px) {
+    .top-container {
         grid-template-areas:
-         'showcase showcase'
-         'top-box-a top-box-b';
+            'showcase showcase'
+            'top-box-a top-box-b';
     }
 
-    .showcase h1{
+    .showcase h1 {
         font-size: 2.5rem;
     }
 
-    .main-nav ul{
+    .main-nav ul {
         grid-template-columns: 1fr 1fr;
     }
 
@@ -193,16 +233,16 @@ footer{
     }
 }
 
-/* Media Query for less thatn 500px*/
-@media(max-width:700px){
-    .top-container{
+/* Media Query for less that 500px*/
+@media(max-width:500px) {
+    .top-container {
         grid-template-areas:
-         'showcase '
-         'top-box-a'
-         'top-box-b';
+            'showcase '
+            'top-box-a'
+            'top-box-b';
     }
 
-    .main-nav ul{
+    .main-nav ul {
         grid-template-columns: 1fr;
     }
 }
